syntax = "proto3";

package transfers.v1;

option go_package = "github.com/vaultone/api/internal/genproto/transfers/v1;transfersv1";

message RequestTransferRequest {
	string from_account_id = 1;
	string to_account_id = 2;
	string amount = 3;
	string currency = 4;
}

message RequestTransferResponse {
	string id = 1;
	string status = 2; // Pending|Settled|Failed
}

service TransfersService {
	rpc RequestTransfer(RequestTransferRequest) returns (RequestTransferResponse);
}


